# robot

./: .gitignore  .gitignore~
Aris_Control_demo/: Aris_Control_Demo.includes  Aris_Control_demo.cpp  CMakeCache.txt  CMakeLists.txt  Client.cpp  Control.cpp  Control.h  Gait.cpp  Gait.h  Makefile  Server.cpp  Server.h  TrotGait.cpp  TrotGait.h  cmake_install.cmake  main.cpp
Aris_Control_demo/gait/: TR18.txt  forward.txt
HexIII_Adaptive/: CMakeLists.txt  Client.cpp  Control.cpp  Gait.cpp  Gait.h  HexIII_Adaptive.includes  Kinect_Test.h  Server.cpp  Server.h  Vision_Client.cpp  main.cpp
HexIII_Adaptive_Test/: CMakeLists.txt  HexIII_Adaptive_Test.includes  Image.h  Kinect_Test.cpp  Kinect_Test.h  Robot_Vision.cpp  Robot_Vision.h  Server.cpp  Server.h  Vision_main.cpp
HexIII_Avoid/: CMakeLists.txt  Client.cpp  Control.cpp  Control.h  Gait.cpp  Gait.h  Hexapod_Robot_Prmt.cpp  Kinect_Test.cpp  Server.cpp  Server.h  Vision_Client.cpp  main.cpp
HexIII_Calibration/: CMakeLists.txt  CMakeLists.txt~  Client.cpp  Control.cpp  Gait.cpp  Gait.h  Kinect_Test.cpp  Kinect_Test.h  Server.cpp  Server.h  Vision_Client.cpp  Vision_Client.h  Vision_main.cpp
HexIII_Calibration/calibration_txt/: 10.txt  11F.txt  13.txt  14F.txt  15.txt  15F.txt  16.txt  17F.txt  18F.txt  19.txt  19F.txt  2.txt  20.txt  22.txt  22F.txt  25.txt  25F.txt  26F.txt  27.txt  29F.txt  30.txt  30F.txt  31.txt  31F.txt  32F.txt  33.txt  33F.txt  34F.txt  36.txt  37F.txt  39.txt  3F.txt  4.txt  40F.txt  42.txt  42F.txt  44.txt  44F.txt  46.txt  46F.txt  (+22 more)
HexIII_Safe/: CMakeLists.txt  Client.cpp  Control.cpp  Gait.cpp  Gait.h  HexIII_Safe.includes  Kinect_Test.cpp  Kinect_Test.h  Server.cpp  Vision_Client.cpp  Vision_main.cpp
HexIII_Vision/: CMakeLists.txt  Client.h  Control.cpp  Control.h  Control_Client.cpp  Gait.h  Hexapod_Robot.cpp  Hexapod_Robot_Prmt.h  Kinect_Test.h  Server.cpp  Server.h  Vision_Client.cpp  main.cpp
HexIII_Vision/gait/: fast_forward.txt  low.txt
HexIII_Vision_1/: CMakeLists.txt  Client.cpp  Control.cpp  Gait.cpp  Gait.h  Kinect_Test.cpp  Kinect_Test.h  Kinect_Test1.cpp  Kinect_Test1.h  Server.cpp  Server.h  Vision_Client.cpp  Vision_Client.h  Vision_Client1.cpp  Vision_Client1.h  Vision_main1.cpp  main.cpp
HexIII_Vision_1/gait/: TR15.txt
HexIII_Vision_Test/: CMakeLists.txt  Client.cpp  Control.cpp  Gait.cpp  Gait.h  Kinect_Test.cpp  Kinect_Test.h  Robot_Vision.cpp  Robot_Vision.h  Server.cpp  Server.h  Vision_Client.cpp  Vision_main.cpp  main.cpp
HexIII_Vision_Test/gait/: TL15.txt
LAPACK/Linux/: Make from source code.txt  Makefile.in_of_cblas  Makefile_of_lapack  Readme.txt
LAPACK/Windows/: ReadMe.txt
LAPACK/Windows/include/: cblas_f77.h  lapacke.h
robot/Aris_Control_demo/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
